test link another page

--- a/about.html
+++ b/about.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My First Webpage</title>
+        <title>About Us</title>
     </head>
     <body>
         <h1>Hello Eddga Emma !</h1>
-        <p>My first paragraph. <a href="about.html">About Us</a></p>
+        <p>My Page is about us</p>
     </body>
 </html>
 
