--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Hello Eddga Emma !</h1>
+        <p>and Hello world!</p>
         <p>My Page is about us</p>
     </body>
 </html>
